# nordvpn-macos-cli

./: .gitignore  README.md  pyproject.toml
docs/: TODO.md
src/nordvpn/: __init__.py  __main__.py  api.py  cli.py  config.py  firewall.py  openvpn.py  setup.py  tray.py  utils.py  verify.py
tests/: test_e2e_real.py
